# IntelliSerra

./: CMakeLists.txt  README.md  main.cpp
Include/: Alpino.h  Carnivoro.h  Desertico.h  Impianto.h  Logger.h  Mediterraneo.h  Orario.h  Serra.h  Tropicale.h  UserInterface.h
Src/: Alpino.cpp  Carnivoro.cpp  Desertico.cpp  Impianto.cpp  Logger.cpp  Mediterraneo.cpp  Orario.cpp  Serra.cpp  Tropicale.cpp  UserInterface.cpp
